# hermify-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
docs/: DEPLOY_HF_SPACES.md
src/hermify_mcp/: cli.py  config.py  dataset_store.py  eval.py  hf_sync.py  server.py
tests/: test_cli.py  test_config.py  test_dataset_store.py  test_hf_sync.py  test_server.py
