[project]
name = "hermify-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "duckdb>=1.5.3",
    "fastmcp>=3.4.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
hermify-mcp = "hermify_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"