[project]
name = "hermify-mcp"
version = "0.2.1"
description = "Cross-agent, dataset-backed skill and memory sync via MCP. Hermify your agent interactions into portable, event-sourced artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Felix Mutinda" }
]

keywords = [
    "mcp", 
    "model-context-protocol", 
    "ai-agents", 
    "llm", 
    "huggingface", 
    "duckdb", 
    "agent-memory", 
    "claude", 
    "gemini", 
    "tools",
    "fastmcp"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "datasets>=5.0.0",
    "duckdb>=1.5.3",
    "fastmcp>=3.4.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
hermify-mcp = "hermify_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"